<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <androidx.cardview.widget.CardView
                android:id="@+id/fondo_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/fondo"
                app:cardCornerRadius="0dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fondo_widget">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/menu_connection"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="monospace"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/status_conecction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Conexion exitosa"
                        android:textColor="#4AB152"
                        android:textSize="16sp"
                        android:fontFamily="monospace"
                        app:layout_constraintBottom_toBottomOf="@+id/textView21"
                        app:layout_constraintStart_toEndOf="@+id/textView21" />

                    <TextView
                        android:id="@+id/dayTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="Mañana"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:fontFamily="monospace"
                        app:layout_constraintBottom_toTopOf="@+id/date"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="12/12/2022"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:fontFamily="monospace"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:id="@+id/tabla_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/door_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/widget_a">

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_puertas"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            app:layout_constraintEnd_toEndOf="@+id/imageView2"
                            app:layout_constraintStart_toStartOf="@+id/imageView2"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/door" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/light_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/widget_a">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/lightbulb" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_luces"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            app:layout_constraintEnd_toEndOf="@+id/imageView"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/gass_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/widget_a">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_gases"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            app:layout_constraintEnd_toEndOf="@+id/imageView3"
                            app:layout_constraintStart_toStartOf="@+id/imageView3"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/gas" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/setting_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/widget_a">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_configuracion"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            app:layout_constraintEnd_toEndOf="@+id/imageView4"
                            app:layout_constraintStart_toStartOf="@+id/imageView4"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/settings" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>